# transcript_extractor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  run_tests.sh  test_integration.py
docs/: VAD_PARAMETERS.md
src/transcript_extractor/: __init__.py  cli.py  mcp_server.py
src/transcript_extractor/core/: __init__.py  base_transcriber.py  breeze_transcriber.py  cache.py  constants.py  downloader.py  service.py  transcriber.py
