[project]
name = "transcript-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "click>=8.2.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "whisperx>=3.3.4",
    "yt-dlp>=2025.6.9",
    "requests>=2.31.0",
    "mcp[cli]>=1.9.4",
    "mcpauth>=0.1.1",
    "starlette>=0.47.1",
    "uvicorn>=0.34.3",
    "debugpy>=1.8.14",
    "redis>=5.0.8",
]

[tool.uv]
package = true

[project.scripts]
transcript-extractor = "transcript_extractor.cli:main"
transcript-extractor-mcp = "transcript_extractor.mcp_server:main_mcp"
